--- a/CLASS TUTORIALS/TUTORIALS/css animations/index.html
+++ b/CLASS TUTORIALS/TUTORIALS/css animations/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HELLO</title>
+    <title>MOOD HOUR </title>
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,10 +12,10 @@
 <body>
 
     <br>
-    <a href="#" class = "button"> HELLLLLO</a>
+    <a href="#" class = "button"> MOOD HOUR</a>
     <br>
     <br>
-    <a href="#" class = "button2"> <marquee>YO YO YO YO</marquee></a>
+    <a href="#" class = "button2"> <marquee>M O O D  H O U R</marquee></a>
     
     
 
