--- a/NET ART/index.html
+++ b/NET ART/index.html
@@ -25,10 +25,9 @@
 <body>
 
     <br>
-    <p style="font-family: 'panic', sans-serif; padding-left: 125px; font-size: 220px; ">MOOOOOD HOUR</p></h1>
+    <p style="font-family: 'panic', sans-serif; padding-left: 125px; font-size: 220px; ">MOOOOOD HOUR</p>
     
-    <header><p style="font-family: 'boohong', sans-serif;">MOOOOOOOOD.</p>
-    </header>
+    <header><p style="font-family: 'boohong', sans-serif;">MOOOOOOOOD.</p></header>
    
     <!-- ///////IMAGES ///// -->
     <div class="image-div" id="mood">
@@ -39,6 +38,10 @@
        <div class="image-div" id="mood2">
         <img src="mood2.png" alt="mood2">
        </div>
+
+       <div class="image-div" id="mood3">
+        <img src="mood3.png" alt="mood3">
+    </div>
 
        
 
