--- a/3js code/index.html
+++ b/3js code/index.html
@@ -24,8 +24,8 @@
 
 <body>
     <header>
-        <p>Starter file from <a href="https://threejs.org/docs/#manual/en/introduction/Creating-a-scene">Three.js documentation</a></p>
-        <p>Three.js library is imported via a <a href="https://threejs.org/docs/#manual/en/introduction/Installation">CDN</a></p>
+        <!-- <p>Starter file from <a href="https://threejs.org/docs/#manual/en/introduction/Creating-a-scene">Three.js documentation</a></p>
+        <p>Three.js library is imported via a <a href="https://threejs.org/docs/#manual/en/introduction/Installation">CDN</a></p> -->
     </header>
 
 </body>
