--- a/NAOMI 3JS/index.html
+++ b/NAOMI 3JS/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three.js Starter File</title>
+    <title>NAOMI THREE.JS</title>
     <link rel="stylesheet" href="css/style.css">
 
     <!-- use an import map to link to the Three.js CDN -->
