--- a/NAOMI 3JS/index.html
+++ b/NAOMI 3JS/index.html
@@ -26,7 +26,14 @@
     <header>
         <!-- <p>Starter file from <a href="https://threejs.org/docs/#manual/en/introduction/Creating-a-scene">Three.js documentation</a></p>
         <p>Three.js library is imported via a <a href="https://threejs.org/docs/#manual/en/introduction/Installation">CDN</a></p> -->
-    </header>
+        <h1>🅽Ⓐ🅾Ⓜ🅸 🅽Ⓐ🅾Ⓜ🅸 </h1>
+      </header>
+
+      <main>
+        <div id="scene-container">
+          <!-- SCENE INSERTED HERE -->
+        </div>
+      </main>
 
 </body>
 </html>
