--- a/NAOMI QUIZ 3JS/index.html
+++ b/NAOMI QUIZ 3JS/index.html
@@ -26,13 +26,13 @@
     <header>
         <!-- <p>Starter file from <a href="https://threejs.org/docs/#manual/en/introduction/Creating-a-scene">Three.js documentation</a></p>
         <p>Three.js library is imported via a <a href="https://threejs.org/docs/#manual/en/introduction/Installation">CDN</a></p> -->
-        <h1>🅽Ⓐ🅾Ⓜ🅸 🅽Ⓐ🅾Ⓜ🅸 </h1>
+        <h1>ⓃⒶⓄⓂⒾ ③ⒿⓈ ⓆⓊⒾⓏ</h1>
       </header>
 
       <main>
-        <div id="scene-container">
+        <!-- <div id="scene-container"> -->
           <!-- SCENE INSERTED HERE -->
-        </div>
+        <!-- </div> -->
       </main>
 
 </body>
