--- a/SHADER/index.html
+++ b/SHADER/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shader Pt 1</title>
+    <title>𝙽Ａ𝙾Ｍ𝙸'𝚂 𝚂Ｈ𝙰Ｄ𝙴Ｒ𝚂</title>
     <link rel="stylesheet" href="css/style.css">
 
     <!-- use an import map to link to the Three.js CDN -->
